<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:fitsSystemWindows="true"
    tools:context=".MainActivity"
    android:gravity="center">

    <androidx.cardview.widget.CardView
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:layout_margin="16dp"
        app:cardBackgroundColor="?attr/colorSecondaryContainer"
        app:cardCornerRadius="16dp"
        app:cardElevation="0dp">

        <LinearLayout
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:gravity="center"
            android:orientation="vertical"
            android:paddingBottom="16dp"
            android:layout_marginTop="16dp">

            <androidx.cardview.widget.CardView
                android:layout_height="80dp"
                android:layout_width="80dp"
                app:cardBackgroundColor="?attr/colorSecondaryContainer"
                app:cardCornerRadius="16dp"
                app:cardElevation="0dp">

                <ImageView
                    android:layout_height="match_parent"
                    android:layout_width="match_parent"
                    android:src="@drawable/logo"
                    android:scaleType="centerCrop"
                    android:id="@+id/main_logo" />

            </androidx.cardview.widget.CardView>

            <TextView
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:textSize="24sp"
                android:textColor="?attr/colorOnSecondaryContainer"
                android:layout_marginTop="8dp"
                android:id="@+id/main_title"
                android:text="@string/app_name"
                android:textStyle="italic" />

        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <LinearLayout
        android:layout_height="0dp"
        android:layout_width="match_parent"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="vertical">

        <GridLayout
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:columnCount="2"
            android:rowCount="3"
            android:gravity="center">

            <com.google.android.material.button.MaterialButton
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:layout_margin="11dp"
                android:textSize="22sp"
                android:backgroundTint="?attr/colorSecondaryContainer"
                android:textColor="?attr/colorOnSecondaryContainer"
                android:layout_gravity="center"
                android:id="@+id/powersave"
                android:text="@string/string_powersave_mode" />

            <com.google.android.material.button.MaterialButton
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:layout_margin="11dp"
                android:textSize="22sp"
                android:backgroundTint="?attr/colorSecondaryContainer"
                android:textColor="?attr/colorOnSecondaryContainer"
                android:layout_gravity="center"
                android:id="@+id/balance"
                android:text="@string/string_balance_mode" />

            <com.google.android.material.button.MaterialButton
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:layout_margin="11dp"
                android:textSize="22sp"
                android:backgroundTint="?attr/colorSecondaryContainer"
                android:textColor="?attr/colorOnSecondaryContainer"
                android:layout_gravity="center"
                android:id="@+id/performance"
                android:text="@string/string_performance_mode" />

            <com.google.android.material.button.MaterialButton
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:layout_margin="11dp"
                android:textSize="22sp"
                android:backgroundTint="?attr/colorSecondaryContainer"
                android:textColor="?attr/colorOnSecondaryContainer"
                android:layout_gravity="center"
                android:id="@+id/fast"
                android:text="@string/string_fast_mode" />

            <com.google.android.material.button.MaterialButton
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:layout_margin="11dp"
                android:textSize="22sp"
                android:backgroundTint="?attr/colorSecondaryContainer"
                android:textColor="?attr/colorOnSecondaryContainer"
                android:layout_gravity="center"
                android:id="@+id/super_powersave"
                android:text="@string/string_super_powersave_mode" />

            <com.google.android.material.button.MaterialButton
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:layout_margin="11dp"
                android:textSize="22sp"
                android:backgroundTint="?attr/colorSecondaryContainer"
                android:textColor="?attr/colorOnSecondaryContainer"
                android:layout_gravity="center"
                android:id="@+id/go_app_list"
                android:text="@string/string_app_list_config" />

        </GridLayout>

    </LinearLayout>

</LinearLayout>
