<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_height="match_parent"
     android:layout_width="match_parent"
     android:orientation="vertical"
     android:fitsSystemWindows="true"
     tools:context=".InfoActivity">

    <androidx.cardview.widget.CardView
         android:layout_height="wrap_content"
         android:layout_width="match_parent"
         android:layout_marginEnd="15dp"
         app:cardElevation="0dp"
         app:cardBackgroundColor="?attr/colorSecondaryContainer"
         android:layout_marginTop="10dp"
         android:layout_marginStart="15dp"
         app:cardCornerRadius="16dp">

        <LinearLayout
             android:layout_height="wrap_content"
             android:layout_width="match_parent"
             android:gravity="center_vertical"
             android:padding="16dp"
             android:orientation="horizontal">

            <androidx.cardview.widget.CardView
                 android:layout_height="50dp"
                 android:layout_width="50dp"
                 android:layout_marginEnd="16dp"
                 app:cardElevation="0dp"
                 app:cardBackgroundColor="?attr/colorSecondaryContainer"
                 app:cardCornerRadius="10dp">

                <ImageView
                     android:layout_height="match_parent"
                     android:layout_width="match_parent"
                     android:src="@drawable/logo"
                     android:scaleType="centerCrop"
                     android:id="@+id/main_logo" />

            </androidx.cardview.widget.CardView>

            <TextView
                 android:layout_height="wrap_content"
                 android:layout_width="match_parent"
                 android:gravity="center"
                 android:textSize="30sp"
                 android:textColor="?attr/colorOnSecondaryContainer"
                 android:text="@string/app_name"
                 android:textStyle="italic|bold" />

        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <ScrollView
         android:layout_height="0dp"
         android:layout_width="match_parent"
         android:layout_weight="1">

        <LinearLayout
             android:layout_height="wrap_content"
             android:layout_width="match_parent"
             android:orientation="vertical">

            <androidx.cardview.widget.CardView
                 android:layout_height="wrap_content"
                 android:layout_width="match_parent"
                 android:layout_marginEnd="15dp"
                 app:cardElevation="0dp"
                 app:cardBackgroundColor="?attr/colorSecondaryContainer"
                 android:layout_marginTop="10dp"
                 android:layout_marginStart="15dp"
                 app:cardCornerRadius="16dp">

                <LinearLayout
                     android:layout_height="wrap_content"
                     android:layout_width="match_parent"
                     android:padding="20dp"
                     android:orientation="vertical">

                    <LinearLayout
                         android:layout_height="wrap_content"
                         android:layout_width="match_parent"
                         android:orientation="horizontal">

                        <TextView
                             android:layout_height="wrap_content"
                             android:layout_width="0dp"
                             android:gravity="start"
                             android:textSize="12sp"
                             android:textColor="?attr/colorOnSecondaryContainer"
                             android:layout_weight="1"
                             android:text="@string/info_f" />

                        <TextView
                             android:layout_height="wrap_content"
                             android:layout_width="0dp"
                             android:gravity="center"
                             android:textSize="16sp"
                             android:textColor="@color/purple_200"
                             android:layout_weight="1"
                             android:text="@string/author"
                             android:textStyle="italic|bold" />

                    </LinearLayout>

                    <TextView
                         android:layout_height="wrap_content"
                         android:layout_width="match_parent"
                         android:textSize="17sp"
                         android:textColor="?attr/colorOnSecondaryContainer"
                         android:text="@string/first_info"
                         android:textStyle="italic" />

                </LinearLayout>

            </androidx.cardview.widget.CardView>

        </LinearLayout>

    </ScrollView>

    <LinearLayout
         android:layout_height="wrap_content"
         android:layout_width="match_parent"
         android:layout_marginBottom="30dp"
         android:gravity="center"
         android:orientation="horizontal"
         android:paddingTop="10dp">

        <com.google.android.material.button.MaterialButton
             android:layout_height="60dp"
             android:layout_width="150dp"
             android:layout_marginEnd="20dp"
             android:elevation="0dp"
             android:textSize="18sp"
             android:backgroundTint="?attr/colorSecondaryContainer"
             android:textColor="?attr/colorOnSecondaryContainer"
             android:id="@+id/info_refuse"
             android:text="@string/refuse" />

        <com.google.android.material.button.MaterialButton
             android:layout_height="60dp"
             android:layout_width="150dp"
             android:elevation="0dp"
             android:textSize="18sp"
             android:backgroundTint="?attr/colorSecondaryContainer"
             android:textColor="?attr/colorOnSecondaryContainer"
             android:layout_marginStart="20dp"
             android:id="@+id/info_accept"
             android:text="@string/accept" />

    </LinearLayout>

</LinearLayout>