<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_height="match_parent"
     android:layout_width="match_parent"
     android:orientation="vertical"
     android:fitsSystemWindows="true"
     tools:context=".AppConfigActivity">

    <LinearLayout
         android:layout_height="wrap_content"
         android:layout_width="match_parent"
         android:gravity="center"
         android:orientation="horizontal">

        <ImageView
             android:layout_height="48dp"
             android:layout_width="48dp"
             android:src="@drawable/ic_back"
             android:contentDescription="@string/go_back"
             android:id="@+id/backButton3" />

        <TextView
             android:layout_height="wrap_content"
             android:layout_width="0dp"
             android:gravity="center"
             android:textAlignment="center"
             android:textSize="20sp"
             android:textColor="?attr/colorOnSecondaryContainer"
             android:layout_weight="2"
             android:text="@string/about_and_support"
             android:textStyle="bold" />

        <View
             android:layout_height="48dp"
             android:layout_width="48dp" />

    </LinearLayout>

    <androidx.cardview.widget.CardView
         android:layout_height="wrap_content"
         android:layout_width="match_parent"
         android:layout_margin="16dp"
         app:cardElevation="0dp"
         app:cardBackgroundColor="?attr/colorSecondaryContainer"
         app:cardCornerRadius="16dp">

        <LinearLayout
             android:layout_height="wrap_content"
             android:layout_width="match_parent"
             android:gravity="center"
             android:orientation="vertical"
             android:paddingBottom="16dp"
             android:layout_marginTop="16dp">

            <androidx.cardview.widget.CardView
                 android:layout_height="80dp"
                 android:layout_width="80dp"
                 app:cardElevation="0dp"
                 app:cardBackgroundColor="?attr/colorSecondaryContainer"
                 app:cardCornerRadius="16dp">

                <ImageView
                     android:layout_height="match_parent"
                     android:layout_width="match_parent"
                     android:src="@drawable/logo"
                     android:scaleType="centerCrop"
                     android:id="@+id/main_logo" />

            </androidx.cardview.widget.CardView>

            <TextView
                 android:layout_height="wrap_content"
                 android:layout_width="wrap_content"
                 android:textSize="24sp"
                 android:textColor="?attr/colorOnSecondaryContainer"
                 android:layout_marginTop="8dp"
                 android:id="@+id/main_title"
                 android:text="@string/app_name"
                 android:textStyle="italic" />

        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <LinearLayout
         android:layout_height="match_parent"
         android:layout_width="match_parent"
         android:orientation="vertical">

        <ScrollView
             android:layout_height="wrap_content"
             android:layout_width="match_parent">

            <LinearLayout
                 android:layout_height="wrap_content"
                 android:layout_width="match_parent"
                 android:orientation="vertical">

                <androidx.cardview.widget.CardView
                     android:layout_height="wrap_content"
                     android:layout_width="match_parent"
                     android:layout_margin="16dp"
                     app:cardElevation="0dp"
                     app:cardBackgroundColor="?attr/colorSecondaryContainer"
                     app:cardCornerRadius="16dp">

                    <LinearLayout
                         android:layout_height="wrap_content"
                         android:layout_width="match_parent"
                         android:padding="16dp"
                         android:orientation="vertical">

                        <TextView
                             android:layout_height="wrap_content"
                             android:layout_width="wrap_content"
                             android:textSize="24sp"
                             android:textColor="?attr/colorOnSecondaryContainer"
                             android:text="@string/info_f" />

                        <TextView
                             android:layout_height="wrap_content"
                             android:layout_width="wrap_content"
                             android:textSize="18sp"
                             android:textColor="?attr/colorOnSecondaryContainer"
                             android:layout_marginTop="8dp"
                             android:text="@string/first_info" />

                    </LinearLayout>

                </androidx.cardview.widget.CardView>

            </LinearLayout>

        </ScrollView>

    </LinearLayout>

</LinearLayout>